--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>Expanding Cards Project</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hello</h2>
-    <h2>Hello</h2>
+    <!--Start of the Expanding Cards Project-->
+    <div class = "container">
+
+        <!--Will be used to expand image upon activation-->
+        <div class = "panel active" style = "background-image: url('') ;">
+            <h3>Explore the World</h3>
+        </div>
+         
+    </div>
 
     <script src = "script.js"></script>
 </body>
