Added photos to the flexbox

--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
 <body>
     <!--Start of the Expanding Cards Project-->
     <div class = "container">
-
         <!--Will be used to expand image upon activation-->
-        <div class = "panel active" style = "background-image: url('') ;">
+        <div class = "panel active" style = "background-image: url(images/pexels-stein-egil-liland-aurora-borealis.jpg);">
             <h3>Explore the World</h3>
         </div>
-         
+
+        <div class = "panel" style = "background-image: url(images/pexels-brayden-law-vancouver-bc-cn.jpg);">
+            <h3>Vancouver, BC, Canada</h3>
+        </div>
+
+        <div class = "panel" style = "background-image: url(images/pexels-james-wheeler-toronto-on-cn.jpg);">
+            <h3>Toronto, ON, Canada</h3>
+        </div>
+
+        <div class = "panel" style = "background-image: url(images/pexels-eugene-dorosh-paris-france.jpg);">
+            <h3>Paris, France</h3>
+        </div>
+
+        <div class = "panel" style = "background-image: url(images/pexels-gildo-cancelli-venice-italy.jpg);">
+            <h3>Venice, Italy</h3>
+        </div>
+        
     </div>
 
     <script src = "script.js"></script>
